// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RestartScanVisualHelperToggleTest onClick: step disabled 1`] = `
<div
  className="visual-helper"
>
  <div
    className="visual-helper-text"
  >
    Visual helper
  </div>
  <VisualizationToggle
    checked={false}
    className="visual-helper-toggle"
    disabled={false}
    onClick={[Function]}
    visualizationName="Visual helper"
  />
</div>
`;

exports[`RestartScanVisualHelperToggleTest onClick: step enabled 1`] = `
<div
  className="visual-helper"
>
  <div
    className="visual-helper-text"
  >
    Visual helper
  </div>
  <VisualizationToggle
    checked={true}
    className="visual-helper-toggle"
    disabled={false}
    onClick={[Function]}
    visualizationName="Visual helper"
  />
</div>
`;

exports[`RestartScanVisualHelperToggleTest render 1`] = `
<div
  className="visual-helper"
>
  <div
    className="visual-helper-text"
  >
    Visual helper
  </div>
  <VisualizationToggle
    checked={true}
    className="visual-helper-toggle"
    disabled={false}
    onClick={[Function]}
    visualizationName="Visual helper"
  />
</div>
`;
